<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="520dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">


    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="150dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:layout_marginVertical="15dp"
        />

    <com.skydoves.colorpickerview.sliders.AlphaSlideBar
        android:id="@+id/alphaSlideBar"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:selector_AlphaSlideBar="@drawable/wheel"
        app:borderColor_AlphaSlideBar="@android:color/darker_gray"
        app:borderSize_AlphaSlideBar="2"/>


    <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
        android:id="@+id/brightnessSlide"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:selector_BrightnessSlider="@drawable/wheel"
        app:borderColor_BrightnessSlider="@android:color/darker_gray"
        app:borderSize_BrightnessSlider="2"/>

        <Button
            android:id="@+id/bttn_picker_Cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:width="40dp"
            android:height="5dp"
            android:text="@string/cancel"
            android:textSize="10sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/stroke"
            android:textColor="#333232"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.326">


            <ImageButton
                android:id="@+id/bttn_stroke_S"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/transparent"
                android:outlineProvider="paddedBounds"
                android:src="@drawable/stroke_s_nic_adobe_express" />

            <ImageButton
                android:id="@+id/bttn_stroke_M"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:outlineProvider="paddedBounds"
                android:src="@drawable/stroke_l_adobe_express" />

            <ImageButton
                android:id="@+id/bttn_stroke_L"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/transparent"
                android:outlineProvider="paddedBounds"
                android:src="@drawable/strokegrande_adobe_express" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <Button
                android:id="@+id/bttn_picker_OK"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginLeft="60dp"
                android:width="40dp"
                android:height="5dp"
                android:text="@string/accept"
                android:textSize="10sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
